--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/normalize.min.css"> 
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -14,13 +14,27 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <header></header>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <nav></nav>
+
+        <article>
+            <section>
+                <div class="avatar"></div>
+
+                <p>Hello! My name is Kamil Prusko.</p>
+
+                <p>I'm a software developer, an <a href="http://opensource.org/definition" ref="nofollow">open-source</a> and <a href="https://getfedora.org/" ref="nofollow">Linux</a> enthusiast. Living in <a href="http://simple.wikipedia.org/wiki/Warsaw" ref="nofollow">Warsaw</a>, Poland.</p>
+
+            </section>
+            <aside>
+                <ul class="links">
+                    <li><a href="https://github.com/kamilprusko" title="My Projects" class="github-icon"></a></li>
+                    <li><a href="https://plus.google.com/+KamilPrusko" title="Google+ Profile" class="google-plus-icon"></a></li>
+                    <li><a href="http://www.imdb.com/user/ur23425197/" title="Movies" class="imdb-icon"></a></li>
+                </ul>
+            </aside>
+        </article>
 
     </body>
 </html>
